@@ -11,7 +11,7 @@
 #ifndef CONNECTOR_H
 #define CONNECTOR_H
 
-#include <canvas.h>
+//#include <canvas.h> // 2018.10.16 - not needed
 #include "canvasitems.h"
 #include <qpointer.h>
 #include <q3valuevector.h>
