@@ -14,7 +14,8 @@
 #include "variant.h"
 #include "itemdocument.h"
 
-#include <canvas.h>
+//#include <canvas.h> // 2018.10.16 - not needed
+#include "canvasitems.h"
 #include <qpointer.h>
 
 class Document;
