@@ -13,7 +13,8 @@
 
 // This file contains class definitions for different types of resizing and rotating
 
-#include <canvas.h>
+//#include <canvas.h> // 2018.10.16 - not needed
+#include "canvasitems.h"
 #include <qpointer.h>
 #include <qmap.h>
 #include <qobject.h>
